api-btc/deployment-btc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-btc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-btc
  template:
    metadata:
      labels:
        app: api-btc
    spec:
      containers:
      - name: api-btc
        image: myregistry.azurecr.io/api-btc-app:1.0
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: api-btc-service
spec:
  selector:
    app: api-btc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
