api-btc/policy-btc.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-api-btc-to-api-get
spec:
  podSelector:
    matchLabels:
      app: api-btc
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api-get
